fix: healthcheck service routing
