# api/src/app.controller.ts
@@ -1,11 +1,11 @@
 import { Controller, Get, HttpCode, HttpStatus } from '@nestjs/common';
 import { AppService } from './app.service';
 
-@Controller()
+@Controller('')
 export class AppController {
   constructor(private readonly appService: AppService) {}
 
-  @Get('healthcheck')
+  @Get('/healthcheck')
   @HttpCode(200)
   healthCheck(): string {
     return this.appService.healthCheck();
